Rotate monitor script added, along with small fixes all over

--- a/refs/linux/vim/vimref.wiki
+++ b/refs/linux/vim/vimref.wiki
@@ -33,6 +33,7 @@
 - `<leader>V` split down vertically
 - `<leader><leader>a` :AsyncRun gatsby develop
 - `<leader><leader>q` :AsyncStop
+- If you record a macro into `q` you can `"qp` to paste the contents of that macro into editor for editing
 
 ### vim folds
 
